fix(backend): atualiza requirements.txt para Django 4.1 e corrige formatação

--- a/octofit-tracker/backend/requirements.txt
+++ b/octofit-tracker/backend/requirements.txt
@@ -1,6 +1,6 @@
 # Requisitos para o backend do OctoFit Tracker
 # Baseado no Monafit Tracker
-Django>=3.2
+Django==4.1
  djangorestframework
  djongo
  pymongo
