--- a/octofit-tracker/backend/requirements.txt
+++ b/octofit-tracker/backend/requirements.txt
@@ -1,7 +1,5 @@
-# Requisitos para o backend do OctoFit Tracker
-# Baseado no Monafit Tracker
-Django==4.1
- djangorestframework
- djongo
- pymongo
- django-cors-headers
+# Django==3.1.12
+djangorestframework==3.12.4
+djongo==1.3.6
+pymongo==3.11.4
+django-cors-headers==3.7.0
